[BUGFIX] Add hidden field search[group] in the navbar search form

--- a/Resources/Private/Partials/Page/Structure/SearchForm.html
+++ b/Resources/Private/Partials/Page/Structure/SearchForm.html
@@ -7,6 +7,7 @@
         <f:form.hidden name="search[pointer]" value="0"/>
         <f:form.hidden name="search[searchType]" value="{settings.searchParams.searchType}"/>
         <f:form.hidden name="search[defaultOperand]" value="{settings.searchParams.defaultOperand}"/>
+        <f:form.hidden name="search[group]" value="{settings.searchParams.group}" />
         <f:form.hidden name="search[mediaType]" value="{settings.searchParams.mediaType}"/>
         <f:form.hidden name="search[sortOrder]" value="{settings.searchParams.sortOrder}"/>
         <f:form.hidden name="search[languageUid]" value="{settings.searchParams.languageUid}"/>
