--- a/Resources/Private/Templates/Page/SidebarLeft.html
+++ b/Resources/Private/Templates/Page/SidebarLeft.html
@@ -21,5 +21,9 @@
         </div>
     </section>
 
+    <section id="outro">
+        <f:cObject typoscriptObjectPath="lib.dynamicContent" data="{pageUid: '{data.uid}', colPos: '9'}"/>
+    </section>
+
 </f:section>
 </html>
