--- a/Resources/Public/Contrib/bulma-scss/helpers/_other.scss
+++ b/Resources/Public/Contrib/bulma-scss/helpers/_other.scss
@@ -1,3 +1,5 @@
+@import "../utilities/mixins";
+
 .is-radiusless {
   border-radius: 0 !important;
 }
@@ -8,6 +10,7 @@
 
 .is-clickable {
   cursor: pointer !important;
+  pointer-events: all !important;
 }
 
 .is-unselectable {
