--- a/Resources/Public/Contrib/bulma-scss/utilities/_all.scss
+++ b/Resources/Public/Contrib/bulma-scss/utilities/_all.scss
@@ -2,6 +2,6 @@
 @import "initial-variables";
 @import "functions";
 @import "derived-variables";
-@import "animations";
 @import "mixins";
 @import "controls";
+@import "extends";
