--- a/Resources/Private/Partials/ContentElements/Header/Header.html
+++ b/Resources/Private/Partials/ContentElements/Header/Header.html
@@ -36,12 +36,9 @@
         </f:case>
         <f:defaultCase>
             <f:if condition="{default}">
-                <f:render partial="Header/Header" arguments="{
-                    header: header,
-                    layout: default,
-                    class: class,
-                    positionClass: positionClass,
-                    link: link}" />
+                <h1 class="{class} is-{default} {positionClass}">
+                    <f:link.typolink parameter="{link}"><span>{header}</span></f:link.typolink>
+                </h1>
             </f:if>
         </f:defaultCase>
     </f:switch>
