--- a/Resources/Private/Templates/WebsiteElement/SocialsLinks.html
+++ b/Resources/Private/Templates/WebsiteElement/SocialsLinks.html
@@ -8,14 +8,14 @@
                 <f:then>
                     <div class="dropdown">
                         <div class="dropdown-trigger">
-                            <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+                            <button class="button" aria-haspopup="true" aria-controls="dropdown-menu-{type.uniqueId}">
                                 <f:render section="icon" arguments="{type: type}" />
                                 <span class="icon is-small">
                                     <i class="fas fa-angle-down" aria-hidden="true"></i>
                                 </span>
                             </button>
                         </div>
-                        <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                        <div class="dropdown-menu" id="dropdown-menu-{type.uniqueId}" role="menu">
                             <div class="dropdown-content">
                                 <f:for each="{type.data}" as="link">
                                     <f:link.typolink class="dropdown-item" parameter="{link.url}">
