--- a/Resources/Private/Partials/Page/Navigation/Mega.html
+++ b/Resources/Private/Partials/Page/Navigation/Mega.html
@@ -2,7 +2,7 @@
 
 <f:for each="{mainNavigation}" as="item_1">
     <f:variable name="classActive">
-        <f:if condition="{item_1.active} || ({item_1.data.doktype} == 4 && {item_1.data.shortcut} == {data.uid})">
+        <f:if condition="{item_1.active}">
             is-active
         </f:if>
     </f:variable>
@@ -36,7 +36,7 @@
 
 <f:section name="sublevel">
     <f:variable name="classActive">
-        <f:if condition="{item.current} || ({item.data.doktype} == 4 && {item.data.shortcut} == {currentUid})">
+        <f:if condition="{item.current}">
             is-active
         </f:if>
     </f:variable>
