--- a/Resources/Private/Partials/Page/Navigation/QuickLinks.html
+++ b/Resources/Private/Partials/Page/Navigation/QuickLinks.html
@@ -4,7 +4,7 @@
     <ul>
         <f:for each="{quickLinks}" as="item">
             <f:variable name="classActive">
-                <f:if condition="{item.active} || ({item.data.doktype} == 4 && {item.data.shortcut} == {data.uid})">
+                <f:if condition="{item.current}">
                     is-active
                 </f:if>
             </f:variable>
