[FEATURE] Add block style "List of buttons" in RTE

--- a/Resources/Public/Scss/Rte/rte.scss
+++ b/Resources/Public/Scss/Rte/rte.scss
@@ -29,3 +29,12 @@
 .text-striked {
   text-decoration: line-through;
 }
+
+.buttons{
+  &.has-text-centered{
+    @extend .is-centered;
+  }
+  &.has-text-right{
+    @extend .is-right;
+  }
+}
