[BUGFIX] Limit flash messages styling to .typo3-messages

--- a/Resources/Public/Scss/Theme/_flashmessages.scss
+++ b/Resources/Public/Scss/Theme/_flashmessages.scss
@@ -1,36 +1,34 @@
 
-.alert{
-  @extend .message;
-}
-.alert-success{
-  @extend .is-success;
-}
-.alert-warning{
-  @extend .is-warning;
-}
-.alert-danger{
-  @extend .is-danger;
-}
-.alert-info{
-  @extend .is-info;
-}
-.alert-title{
-  @extend .message-header;
-}
-.alert-message{
-  @extend .message-body;
-}
+.typo3-messages, .frame-type-felogin_login .frame-inner .typo3-messages{
+  @extend .content;
+  list-style: none;
+  margin-left: 0;
+  margin-top: 0;
 
-.frame-type-felogin_login .frame-inner{
-  .typo3-messages{
-    list-style: none;
-    margin-left: 0;
-    margin-top: 0;
-
-    h4{
-      font-size: $size-normal;
-      margin-bottom: 0;
-    }
+  h4{
+    font-size: $size-normal;
+    margin-bottom: 0;
   }
 
+  .alert{
+    @extend .message;
+  }
+  .alert-success{
+    @extend .is-success;
+  }
+  .alert-warning{
+    @extend .is-warning;
+  }
+  .alert-danger{
+    @extend .is-danger;
+  }
+  .alert-info{
+    @extend .is-info;
+  }
+  .alert-title{
+    @extend .message-header;
+  }
+  .alert-message{
+    @extend .message-body;
+  }
 }
