[BUGFIX] Use correct class for scrollable table

--- a/Resources/Private/Partials/Form/SummaryPage.html
+++ b/Resources/Private/Partials/Form/SummaryPage.html
@@ -6,7 +6,7 @@
 	</f:if>
 
 	<fieldset class="form-group">
-		<div class="table-responsive">
+		<div class="table-container">
 			<table class="table is-fullwidth">
 				<formvh:renderAllFormValues renderable="{page.rootForm}" as="formValue">
 					<tr>
