--- a/Resources/Private/Templates/ContentElements/Table.html
+++ b/Resources/Private/Templates/ContentElements/Table.html
@@ -3,7 +3,7 @@
 <f:section name="Main">
 
     <f:if condition="{table}">
-        <div class="table-responsive">
+        <div class="table-container">
 
             <f:if condition="{0: ''} == {tableClasses}">
                 <f:then><f:variable name="allClasses" value="" /></f:then>
