[BUGFIX] Homogenize height of the navbar elements

--- a/Resources/Public/Scss/Theme/_navbar.scss
+++ b/Resources/Public/Scss/Theme/_navbar.scss
@@ -15,6 +15,9 @@ $navbar-dropdown-border-top-color: $primary !default;
 }
 
 .navbar-start, .navbar-end {
+  & > .navbar-item{
+    min-height: $navbar-height;
+  }
   & > a, & > .navbar-item > a {
     font-weight: $navbar-item-weight;
     font-size: $navbar-item-size;
