--- a/Resources/Private/Partials/News/List/Item.html
+++ b/Resources/Private/Partials/News/List/Item.html
@@ -12,8 +12,7 @@
 	<f:variable name="newsCols">4</f:variable>
 </f:if>
 <f:variable name="columnConfig">{settings.responsiveimages.list.{newsCols}}</f:variable>
-<asd:data.imageVariants as="variants" variants="{settings.responsiveimages.variants}" />
-<asd:data.imageVariants as="variants" variants="{variants}" multiplier="{columnConfig.multiplier}" gutters="{columnConfig.gutters}" corrections="{columnConfig.corrections}" />
+<asd:data.imageVariants as="variants" variants="{settings.responsiveimages.variants}" multiplier="{columnConfig.multiplier}" gutters="{columnConfig.gutters}" corrections="{columnConfig.corrections}" />
 <div class="article articletype-{newsItem.type}{f:if(condition: newsItem.istopnews, then: ' topnews')} column {columnConfig.class}" itemscope="itemscope" itemtype="http://schema.org/Article">
 	<div class="card card-equal-height">
 
