--- a/Resources/Private/Partials/ContentElements/Header/Header.html
+++ b/Resources/Private/Partials/ContentElements/Header/Header.html
@@ -36,9 +36,12 @@
         </f:case>
         <f:defaultCase>
             <f:if condition="{default}">
-                <h1 class="{class} is-{default} {positionClass}">
-                    <f:link.typolink parameter="{link}"><span>{header}</span></f:link.typolink>
-                </h1>
+                <f:render partial="Header/Header" arguments="{
+                    header: header,
+                    layout: default,
+                    class: class,
+                    positionClass: positionClass,
+                    link: link}" />
             </f:if>
         </f:defaultCase>
     </f:switch>
