--- a/Resources/Private/Partials/Page/Navigation/Dropdown.html
+++ b/Resources/Private/Partials/Page/Navigation/Dropdown.html
@@ -16,7 +16,7 @@
                 <a href="{item_1.link}" class="navbar-link{classActive}" {target}>{item_1.title}</a>
                 <div class="navbar-dropdown">
                     <f:for each="{item_1.children}" as="item_2">
-                        <f:render section="sublevel" arguments="{item: item_2, currentUid: data.uid}"/>
+                        <f:render section="sublevel" arguments="{item: item_2, currentUid: data.uid, rootPage: rootPage}"/>
                     </f:for>
                 </div>
             </div>
@@ -29,7 +29,7 @@
 
 <f:section name="sublevel">
     <f:variable name="classActive">
-        <f:if condition="{item.active} && {item_1.data.shortcut} != {rootPage} || {item_1.current}">
+        <f:if condition="{item.active} && {item.data.shortcut} != {rootPage} || {item.current}">
             is-active
         </f:if>
     </f:variable>
@@ -44,7 +44,7 @@
                 <a href="{item.link}" class="navbar-link{classActive}" {target}>{item.title}</a>
                 <div class="navbar-dropdown">
                     <f:for each="{item.children}" as="subitem">
-                        <f:render section="sublevel" arguments="{item: subitem, currentUid: data.uid}"/>
+                        <f:render section="sublevel" arguments="{item: subitem, currentUid: data.uid, rootPage: rootPage}"/>
                     </f:for>
                 </div>
             </div>
