--- a/Resources/Public/Scss/Theme/_navbar.scss
+++ b/Resources/Public/Scss/Theme/_navbar.scss
@@ -125,86 +125,6 @@ $navbar-dropdown-item-text-decoration-active: none !default;
     }
   }
 
-  // Fix hover state for nested dropdown
-  .navbar-item.has-dropdown {
-    &:focus,
-    &:hover,
-    &.is-active {
-      .navbar-link {
-        background-color: transparent;
-      }
-
-      & > .navbar-link {
-        background-color: $navbar-item-hover-background-color;
-      }
-    }
-  }
-
-  // Fix hover state for "colored" nested dropdown
-  @each $name, $pair in $navbar-colors {
-    $color: nth($pair, 1);
-    $color-invert: nth($pair, 2);
-
-    .navbar.is-#{$name} {
-      .navbar-start,
-      .navbar-end{
-        & > a.navbar-item,
-        .navbar-link {
-          &:focus,
-          &:hover,
-          &.is-active {
-            background-color: bulmaDarken($color, 5%);
-            @if variable-exists(navbar-with-background-item-hover-background-color) {
-              background-color: $navbar-with-background-item-hover-background-color;
-            }
-            @if variable-exists(navbar-with-background-item-hover-color) {
-              color: $navbar-with-background-item-hover-color;
-            }
-          }
-        }
-
-        .navbar-link {
-          &::after {
-            border-color: currentColor;
-            @if variable-exists(navbar-with-background-dropdown-arrow) {
-              border-color: $navbar-with-background-dropdown-arrow;
-            }
-          }
-        }
-      }
-
-      .navbar-item.has-dropdown:focus,
-      .navbar-item.has-dropdown:hover,
-      .navbar-item.has-dropdown.is-active {
-        .navbar-link{
-          background-color: transparent;
-          color: unset;
-        }
-        &:not(.nested) > .navbar-link{
-          background-color: bulmaDarken($color, 5%);
-          @if variable-exists(navbar-with-background-item-hover-background-color) {
-            background-color: $navbar-with-background-item-hover-background-color;
-          }
-          color: $color-invert;
-          @if variable-exists(navbar-with-background-item-hover-color) {
-            color: $navbar-with-background-item-hover-color;
-          }
-        }
-
-        .nested{
-          .navbar-link{
-            &:hover,
-            &:focus,
-            &.is-active{
-              background-color: $navbar-dropdown-item-hover-background-color;
-              color: $navbar-dropdown-item-hover-color;
-            }
-          }
-        }
-      }
-    }
-  }
-
   .navbar-item {
     &.is-active,
     &.is-hoverable:focus,
@@ -227,20 +147,6 @@ $navbar-dropdown-item-text-decoration-active: none !default;
       color: $navbar-dropdown-item-color;
       & > .navbar-link{
         padding: 0.375rem 1rem;
-      }
-    }
-
-    // Fix hover state for nested dropdown
-    .navbar-link{
-      &:focus,
-      &:hover {
-        background-color: $navbar-dropdown-item-hover-background-color;
-        color: $navbar-dropdown-item-hover-color;
-      }
-
-      &.is-active {
-        background-color: $navbar-dropdown-item-active-background-color;
-        color: $navbar-dropdown-item-active-color;
       }
     }
   }
@@ -297,6 +203,97 @@ $navbar-dropdown-item-text-decoration-active: none !default;
         }
         &.is-active{
           text-decoration: $navbar-dropdown-item-text-decoration-active;
+        }
+      }
+    }
+  }
+}
+
+@include from($navbar-breakpoint) {
+  .navbar-start, .navbar-end {
+    .navbar-item.nested{
+      .navbar-link{
+        &:hover{
+          background-color: $navbar-dropdown-item-hover-background-color;
+          color: $navbar-dropdown-item-hover-color;
+        }
+        background-color: transparent;
+        color: unset;
+        &.is-active{
+          background-color: $navbar-dropdown-item-active-background-color;
+          color: $navbar-dropdown-item-active-color;
+        }
+      }
+    }
+    & > .navbar-item.has-dropdown{
+      .navbar-item.nested{
+        &:focus,
+        &:hover{
+          & > .navbar-link:not(.is-active){
+            background-color: $navbar-dropdown-item-hover-background-color;
+            color: $navbar-dropdown-item-hover-color;
+          }
+        }
+      }
+    }
+    .navbar-dropdown{
+      a.navbar-item{
+        &.is-active{
+          background-color: $navbar-dropdown-item-active-background-color;
+          color: $navbar-dropdown-item-active-color;
+        }
+      }
+    }
+  }
+
+  @each $name, $pair in $navbar-colors {
+    $color: nth($pair, 1);
+    $color-invert: nth($pair, 2);
+
+    .navbar.is-#{$name} {
+      .navbar-start, .navbar-end {
+        & > a.navbar-item,
+        .navbar-link {
+          &:focus,
+          &:hover,
+          &.is-active {
+            @if variable-exists(navbar-with-background-item-hover-background-color) {
+              background-color: $navbar-with-background-item-hover-background-color;
+            }
+            @if variable-exists(navbar-with-background-item-hover-color) {
+              color: $navbar-with-background-item-hover-color;
+            }
+          }
+          @if variable-exists(navbar-with-background-dropdown-arrow) {
+            &:after{
+              border-color: $navbar-with-background-dropdown-arrow;
+            }
+          }
+        }
+        & > .navbar-item.has-dropdown:hover > .navbar-link {
+          @if variable-exists(navbar-with-background-item-hover-background-color) {
+            background-color: $navbar-with-background-item-hover-background-color;
+          }
+          @if variable-exists(navbar-with-background-item-hover-color) {
+            color: $navbar-with-background-item-hover-color;
+          }
+        }
+        .navbar-item.nested{
+          .navbar-link{
+            &::after {
+              border-color: currentColor;
+            }
+            &:hover{
+              background-color: $navbar-dropdown-item-hover-background-color;
+              color: $navbar-dropdown-item-hover-color;
+            }
+            background-color: transparent;
+            color: unset;
+            &.is-active{
+              background-color: $color;
+              color: $color-invert;
+            }
+          }
         }
       }
     }
