--- a/Resources/Private/Templates/Page/SidebarLeftWNavigation.html
+++ b/Resources/Private/Templates/Page/SidebarLeftWNavigation.html
@@ -10,7 +10,7 @@
 
     <section id="content">
         <div class="container{f:if(condition: breadcrumb, then: ' after-breadcrumb')}">
-            <div class="columns is-multiline is-flex-direction-row-reverse">
+            <div class="columns is-multiline is-flex-direction-row-reverse is-variable is-5-desktop is-8-widescreen">
                 <main id="main" class="column is-three-quarters-desktop is-full-tablet">
                     <f:cObject typoscriptObjectPath="lib.dynamicContent" data="{pageUid: '{data.uid}', colPos: '0'}"/>
                 </main>
