--- a/Resources/Private/Layouts/ContentElements/Default.html
+++ b/Resources/Private/Layouts/ContentElements/Default.html
@@ -5,9 +5,9 @@
     <f:variable name="typeClass">frame-type-{data.CType}</f:variable>
     <f:variable name="layoutClass">frame-layout-{data.layout}</f:variable>
     <f:variable name="containerDesktop">{f:if(condition: "{data.frame_class} == 'desktop'", then: "is-max-desktop")}</f:variable>
-    <f:variable name="backgroundClass">{f:if(condition: "{data.background_color_class} != none && {data.background_frame} == 'expanded'", then: "has-background-{data.background_color_class}")}</f:variable>
-    <f:variable name="backgroundLimited">{f:if(condition: "{data.background_color_class} != none && {data.background_frame} == 'limited'", then: "is-background-limited")}</f:variable>
-    <f:variable name="backgroundClassLimited">{f:if(condition: "{data.background_color_class} != none && {data.background_frame} == 'limited'", then: "has-background-{data.background_color_class}")}</f:variable>
+    <f:variable name="backgroundClass">{f:if(condition: "{data.background_color_class} && {data.background_color_class} != none && {data.background_frame} == 'expanded'", then: "has-background-{data.background_color_class}")}</f:variable>
+    <f:variable name="backgroundLimited">{f:if(condition: "{data.background_color_class} && {data.background_color_class} != none && {data.background_frame} == 'limited'", then: "is-background-limited")}</f:variable>
+    <f:variable name="backgroundClassLimited">{f:if(condition: "{data.background_color_class} && {data.background_color_class} != none && {data.background_frame} == 'limited'", then: "has-background-{data.background_color_class}")}</f:variable>
     <f:variable name="spaceBeforeClass">{f:if(condition: data.space_before_class, then: "frame-space-before-{data.space_before_class}")}</f:variable>
     <f:variable name="spaceAfterClass">{f:if(condition: data.space_after_class, then: "frame-space-after-{data.space_after_class}")}</f:variable>
 
