--- a/Resources/Private/Partials/Page/Structure/SearchForm.html
+++ b/Resources/Private/Partials/Page/Structure/SearchForm.html
@@ -1,6 +1,6 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:if condition="{settings.searchPid}">
-<f:form extensionName="indexedsearch" pluginName="pi2" controller="Search" action="search" method="post" pageUid="{settings.searchPid}">
+<f:form class="{settings.searchFormClasses}" extensionName="indexedsearch" pluginName="pi2" controller="Search" action="search" method="post" pageUid="{settings.searchPid}">
     <div class="tx-indexedsearch-hidden-fields">
         <f:form.hidden name="search[_sections]" value="0"/>
         <f:form.hidden name="search[_freeIndexUid]" value="_"/>
@@ -13,13 +13,13 @@
         <f:form.hidden name="search[languageUid]" value="{settings.searchParams.languageUid}"/>
         <f:form.hidden name="search[numberOfResults]" value="10"/>
     </div>
-    <div class="field has-addons">
-        <div class="control">
-            <f:form.textfield placeholder="{f:translate(extensionName: 'indexed_search', key: 'form.submit')}" name="search[sword]" value="{sword}" class="input is-small" />
+    <div class="{settings.searchFormFieldWrapperClasses}">
+        <div class="{settings.searchFormInputWrapperClasses}">
+            <f:form.textfield placeholder="{f:translate(extensionName: 'indexed_search', key: 'form.submit')}" name="search[sword]" value="{sword}" class="{settings.searchFormInputClasses}" />
         </div>
         <div class="control">
-            <button class="button is-primary is-small">
-               <span class="icon is-small is-right">
+            <button class="{settings.searchFormButtonClasses}">
+               <span class="{settings.searchFormButtonIconClasses}">
                     <i class="fas fa-search"></i>
                </span>
             </button>
