[FEATURE] Add new alignment options on Icon Group content

--- a/Resources/Public/Scss/Theme/_icon_group.scss
+++ b/Resources/Public/Scss/Theme/_icon_group.scss
@@ -75,4 +75,14 @@
       max-width: 50%;
     }
   }
+  &.has-items-center{
+    .icon-group-item{
+      align-items: center;
+    }
+  }
+  &.has-items-end{
+    .icon-group-item{
+      align-items: flex-end;
+    }
+  }
 }
