[BUGFIX] Remove content sliding in template SidebarRightWNavigation

--- a/Resources/Private/Templates/Page/SidebarRightWNavigation.html
+++ b/Resources/Private/Templates/Page/SidebarRightWNavigation.html
@@ -23,7 +23,7 @@
     </section>
 
     <section id="outro">
-        <f:cObject typoscriptObjectPath="lib.dynamicContent" data="{pageUid: '{data.uid}', colPos: '9', slide: '2'}"/>
+        <f:cObject typoscriptObjectPath="lib.dynamicContent" data="{pageUid: '{data.uid}', colPos: '9'}"/>
     </section>
 
 </f:section>
