[FEATURE] Add CSS-Class for RTE mail links

--- a/Resources/Public/Scss/Rte/rte.scss
+++ b/Resources/Public/Scss/Rte/rte.scss
@@ -38,3 +38,14 @@
     @extend .is-right;
   }
 }
+
+a.icon-mail{
+  position: relative;
+  padding-left: 1em;
+  &:before{
+    content: "\2709";
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+}
